--- a/resources/db_config.properties
+++ b/resources/db_config.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:mysql://localhost:3306/library
-db.user=root
-db.password=
+db.url=jdbc:mysql://localhost:port/database_name
+db.user=user
+db.password=password
 db.driver=com.mysql.cj.jdbc.Driver
